# rooster

./: Cargo.toml  Procfile
migrations/2024-08-06-231258_create_users/: up.sql
migrations/2024-08-07-013657_create_roosties/: down.sql  up.sql
src/: bucket.rs  main.rs  models.rs  roosties.rs  schema.rs  users.rs
templates/: dashboard.html.hbs  index.html.hbs  login.html.hbs  register.html.hbs  unauthorized.html.hbs  update.html.hbs  upload.html.hbs
