[package]
name = "rooster"
version = "0.1.0"
authors = ["Brian Tacderan <briantacderan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
cookie = { version = "0.18.1", features = ["percent-encode", "private"] }
diesel = { version = "2.2.2", features = ["chrono", "numeric", "postgres"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
once_cell = "1.17.0"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
rocket_codegen = "0.5.1"
rocket-multipart-form-data = "0.10.7"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sha2 = "0.10.8"
time = "0.3.36"
